[package]
name = "ebiotic"
version = "0.0.1"
edition = "2021"
authors = ["Harry Allsopp <harryallsopp8@gmail.com>"]
description = "A Rust crate for interacting with common bioinformatics tools."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"