[package]
name = "ebiotic"
version = "0.0.2"
edition = "2021"
authors = ["Harry Allsopp <harryallsopp8@gmail.com>"]
description = "A Rust crate for interacting with common bioinformatics tools from the EBI and NCBI."
license = "GPL-3.0"
repository = "https://github.com/hallsopp/ebiotic"
documentation = "https://docs.rs/ebiotic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.13", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bio = "1.5"
thiserror = "1.0"
